--- a/Project_7/Project_7/Site.Master
+++ b/Project_7/Project_7/Site.Master
@@ -67,7 +67,7 @@
 		        <li class="nav-item"><a class="nav-link" href="../About.aspx">About</a></li>
 		        <li class="nav-item"><a class="nav-link" href="../room.aspx">Rooms</a></li>
 		        <li class="nav-item"><a class="nav-link" href="../Resto-Bar.aspx">Resto &amp; Bar</a></li>
-		        <li class="nav-item"><a class="nav-link" href="../Blog.aspx">Blog</a></li>
+<%--		        <li class="nav-item"><a class="nav-link" href="../Blog.aspx">Blog</a></li>--%>
 		        <li class="nav-item"><a class="nav-link" href="../Contact.aspx">Contact</a></li>
                   <%if( Context.User.IsInRole("Admin")) {  %>
                          <li class="nav-item"><a a class="nav-link" runat="server" href="\admin\darkpan-1.0.0\dashboard.aspx">Dashboard</a></li>
